# limon

./: .gitignore  LICENSE  README.md  index.html  install.ps1  install.sh  limon.service  package-lock.json  package.json  pyproject.toml
docs/: index.html  install.ps1  install.sh  style.css  styles.css  tailwind.config.js
limon/: agent.py  cli.py  config.py  danger.py  errors.py  tools.py
limon/providers/: __init__.py  base.py  claude_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
src/: config.js  editor.js  executor.js  index.js  interaction.js  providers.js  security.js  setup.js  ui.js
